--- a/DadJokes/index.html
+++ b/DadJokes/index.html
@@ -16,7 +16,12 @@
   </head>
   <body>
     <div class="container">
-      <div id="content"></div>
+      <div id="content">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam quasi
+        adipisci libero ex explicabo consectetur illum recusandae, dicta
+        voluptatem suscipit inventore expedita officia quo voluptatum esse
+        assumenda repellat provident saepe.
+      </div>
     </div>
     <script src="scripts.js"></script>
   </body>
