--- a/DadJokes/index.html
+++ b/DadJokes/index.html
@@ -16,12 +16,9 @@
   </head>
   <body>
     <div class="container">
-      <div id="content">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam quasi
-        adipisci libero ex explicabo consectetur illum recusandae, dicta
-        voluptatem suscipit inventore expedita officia quo voluptatum esse
-        assumenda repellat provident saepe.
-      </div>
+      <h3>Don't Laugh Challenge</h3>
+      <div id="joke" class="joke"></div>
+      <button id="jokeBtn" class="btn">Get another</button>
     </div>
     <script src="scripts.js"></script>
   </body>
