--- a/FAQCollapse/index.html
+++ b/FAQCollapse/index.html
@@ -16,34 +16,64 @@
   </head>
   <body>
     <div class="container">
-      <h1>Sekcja pytań</h1>
+      <h1>Sekcja trudnych pytań</h1>
       <div class="question">
-        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsam aut
-        pariatur suscipit! Harum error magnam ipsa, at quaerat quis enim.
-        <button class="btn"><i class="fa-solid fa-caret-down"></i></button>
+        <h3>Jaką kuchnię lubisz najbardziej?</h3>
+        <p class="text">
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsam aut
+          pariatur suscipit! Harum error magnam ipsa, at quaerat quis enim.
+        </p>
+        <button class="btn show">
+          <i class="fa-solid fa-caret-down"></i>
+          <i class="fa-solid fa-times"></i>
+        </button>
       </div>
       <div class="question">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates
-        aliquid aperiam commodi omnis ullam officia veniam optio necessitatibus
-        quo. Voluptates doloribus quo, dolorum aspernatur dolor quibusdam. Atque
-        mollitia ab nostrum.
-        <button class="btn"><i class="fa-solid fa-caret-down"></i></button>
+        <h3>Co najostrzejszego zjadłeś w swoim życiu?</h3>
+        <p class="text">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates
+          aliquid aperiam commodi omnis ullam officia veniam optio
+          necessitatibus quo. Voluptates doloribus quo, dolorum aspernatur dolor
+          quibusdam. Atque mollitia ab nostrum.s
+        </p>
+        <button class="btn">
+          <i class="fa-solid fa-caret-down"></i>
+          <i class="fa-solid fa-times"></i>
+        </button>
       </div>
       <div class="question">
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nesciunt alias
-        recusandae consequuntur quasi assumenda odio?
-        <button class="btn"><i class="fa-solid fa-caret-down"></i></button>
+        <h3>Jakie było ostatnio zrobione przez Ciebie zdjęcie?</h3>
+        <p class="text">
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nesciunt
+          alias recusandae consequuntur quasi assumenda odio?
+        </p>
+        <button class="btn">
+          <i class="fa-solid fa-caret-down"></i>
+          <i class="fa-solid fa-times"></i>
+        </button>
       </div>
       <div class="question">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam
-        expedita ducimus voluptatem quod voluptates sapiente magni consequuntur
-        omnis nisi quam.
-        <button class="btn"><i class="fa-solid fa-caret-down"></i></button>
+        <h3>Jaką dodatkową funckcję chciałbyś aby posiadały telefony?</h3>
+        <p class="text">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam
+          expedita ducimus voluptatem quod voluptates sapiente magni
+          consequuntur omnis nisi quam.
+        </p>
+        <button class="btn">
+          <i class="fa-solid fa-caret-down"></i>
+          <i class="fa-solid fa-times"></i>
+        </button>
       </div>
       <div class="question">
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-        Exercitationem, doloribus?
-        <button class="btn"><i class="fa-solid fa-caret-down"></i></button>
+        <h3>Jakiemu zwierzęciu lub roślinie powinno się zmienić nazwę?</h3>
+        <p class="text">
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+          Exercitationem, doloribus?
+        </p>
+        <button class="btn">
+          <i class="fa-solid fa-caret-down"></i>
+          <i class="fa-solid fa-times"></i>
+        </button>
       </div>
     </div>
     <script src="scripts.js"></script>
