--- a/FAQCollapse/index.html
+++ b/FAQCollapse/index.html
@@ -23,7 +23,7 @@
           Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsam aut
           pariatur suscipit! Harum error magnam ipsa, at quaerat quis enim.
         </p>
-        <button class="btn show">
+        <button class="btn">
           <i class="fa-solid fa-caret-down"></i>
           <i class="fa-solid fa-times"></i>
         </button>
