--- a/RandomChoicePicker/index.html
+++ b/RandomChoicePicker/index.html
@@ -16,9 +16,24 @@
   </head>
   <body>
     <div class="container">
-      <h2>Wpisz swoje wybory między którymi będzie wybrany losowy z nich</h2>
-      <div class="text">
-        <textarea name="choice" id="choice" cols="90" rows="10"></textarea>
+      <h3>Wpisz swoje wybory między którymi będzie wybrany losowy z nich</h3>
+
+      <textarea
+        name="choice"
+        id="textarea"
+        placeholder="Wpisuj wyrazy oddzielajace je przecinkiem"
+      ></textarea>
+      <div id="tags">
+        <span class="tag">choice 1</span>
+        <span class="tag">choice 2</span>
+        <span class="tag">choice 3</span>
+        <span class="tag">choice 4</span>
+        <span class="tag">choice 4</span>
+        <span class="tag">choice 4</span>
+        <span class="tag">choice 4</span>
+        <span class="tag">choice 4</span>
+        <span class="tag">choice 4</span>
+        <span class="tag">choice 4</span>
       </div>
     </div>
     <script src="scripts.js"></script>
