--- a/RandomChoicePicker/index.html
+++ b/RandomChoicePicker/index.html
@@ -16,25 +16,14 @@
   </head>
   <body>
     <div class="container">
-      <h3>Wpisz swoje wybory między którymi będzie wybrany losowy z nich</h3>
+      <h3>Wpisz swoje wybory, zatwierdz wciskając enter</h3>
 
       <textarea
         name="choice"
         id="textarea"
         placeholder="Wpisuj wyrazy oddzielajace je przecinkiem"
       ></textarea>
-      <div id="tags">
-        <span class="tag">choice 1</span>
-        <span class="tag">choice 2</span>
-        <span class="tag">choice 3</span>
-        <span class="tag">choice 4</span>
-        <span class="tag">choice 4</span>
-        <span class="tag">choice 4</span>
-        <span class="tag">choice 4</span>
-        <span class="tag">choice 4</span>
-        <span class="tag">choice 4</span>
-        <span class="tag">choice 4</span>
-      </div>
+      <div id="tags"></div>
     </div>
     <script src="scripts.js"></script>
   </body>
