How much water are you drink

--- a/DrinkWater/index.html
+++ b/DrinkWater/index.html
@@ -15,7 +15,30 @@
     <title>DrinkWater</title>
   </head>
   <body>
-    <div class="container"></div>
+    <h1>Wypita woda</h1>
+    <h3>Cel: 2 litry</h3>
+
+    <div class="cup">
+      <div class="remained" id="remained">
+        <span id="liters"></span>
+        <small>Pozostało</small>
+      </div>
+
+      <div class="procentage" id="procentage"></div>
+    </div>
+
+    <p class="text">Zaznacz ile szklanek już wypiłeś</p>
+
+    <div class="cups">
+      <div class="cup cup-small">250ml</div>
+      <div class="cup cup-small">250ml</div>
+      <div class="cup cup-small">250ml</div>
+      <div class="cup cup-small">250ml</div>
+      <div class="cup cup-small">250ml</div>
+      <div class="cup cup-small">250ml</div>
+      <div class="cup cup-small">250ml</div>
+      <div class="cup cup-small">250ml</div>
+    </div>
 
     <script src="scripts.js"></script>
   </body>
